--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,17 @@
 page-home {
+    #map_canvas {
+        height: 90%;
+      }
 
+      ion-app._gmaps_cdv_ .nav-decor{
+        background-color: transparent !important;
+      }
+       
+      home-page {
+       
+          #map {
+              height: 100%;
+          }
+       
+      }
 }
